Update to reflect Minerva

--- a/tagteam/tagteam/templates/tagteam/base.html
+++ b/tagteam/tagteam/templates/tagteam/base.html
@@ -185,7 +185,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">HashTag: Athena & Zeus</a>
+          <a class="navbar-brand" href="/">HashTag: Minerva</a>
         </div>
         <div class="navbar-collapse collapse">
           <!--
